--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@repo/ui": "*",
     "next": "^14.2.3",
+    "qs": "^6.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recoil": "^0.7.7",
@@ -23,6 +24,7 @@
     "@repo/tailwind-config": "*",
     "@repo/typescript-config": "*",
     "@types/node": "^20.11.24",
+    "@types/qs": "^6.9.18",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.18",
