--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "axios": "^1.8.3",
     "next": "^14.2.3",
     "qs": "^6.14.0",
     "react": "^18.3.1",
